2006-12-31  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds: Added Radio project

	* plugins/MiniMode/MiniMode.mdp:
	* plugins/Podcast/Podcast.mdp
	* plugins/Radio/Radio.mdp: Fixed MonoDevelop build

	* plugins/Common.cs.in: Removed compatability Catalog wrapper; hard
	requirement on Banshee 0.11.x, which provides Mono.Gettext for domain-based
	gettext support
	
	* plugins/Recommendation/*.cs: 
	* plugins/Podcast/*.cs: 
	* plugins/MiniMode/MiniModePlugin.cs: Added 'using Mono.Gettext'

	* plugins/MiniMode/MiniModeWindow.cs: Use new Banshee.Configuration API

	* plugins/Radio/*: Added new Internet Radio plugin

	* plugins/Podcast/Makefile.am: Generate gconf schemas

	* build/*: Build rules for generating gconf schemas from assemblies

	* configure.ac: Output build/Makefile, added Radio plugin, added
	GConf support; require Banshee 0.11.4+

2006-12-29  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* ChangeLog:
	* plugins/Podcast/Podcast.mdp:
	* plugins/Podcast/Makefile.am:
	* plugins/Podcast/PodcastInfo.cs:
	* plugins/Podcast/GConfSchemas.cs: (Added)	
	* plugins/Podcast/PodcastPlugin.cs:
	* plugins/Podcast/PodcastGConfKeys.cs: (Removed)
	* plugins/Podcast/UI/PodcastSource.cs:
	* plugins/Podcast/UI/PodcastPlaylistView.cs: Updated to take advantage of 
	new configuration system.
	
2006-12-09  Aaron Bockover  <abock@gnome.org>

	0.11.3 Released

	* configure.ac: Bump to 0.11.3

	* NEWS: Updated with release notes

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds: Updated

	* plugins/MiniMode/MiniModePlugin.cs:
	* plugins/Recommendation/RecommendationPlugin.cs:
	* plugins/Podcast/PodcastPlugin.cs: Added PluginModuleEntry code

	* plugins/Podcast/PodcastCore.cs: Protect against a nullref

	* plugins/Podcast/UI/PodcastPixbufs.cs: Pull the 'speaker' icon from
	the theme before using the ugly blue resource

	* plugins/Podcast/UI/PodcastFeedPropertiesDialog.cs:
	* plugins/Podcast/UI/PodcastPropertiesDialog.cs: Minor UI fixes